--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Squad</title>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IT Squad</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link href="https://upwork-usw2-prod-assets-static.s3.us-west-2.amazonaws.com/org-logo/1582128959346147328?date=1685108683931" rel="icon" type="image/png" sizes="32x32">
-  <script src="js/wow.min.js"></script>
-  <script>
-    new WOW().init();
-  </script>
+  <link
+    href="https://upwork-usw2-prod-assets-static.s3.us-west-2.amazonaws.com/org-logo/1582128959346147328?date=1685108683931"
+    rel="icon" type="image/png" sizes="32x32">
+
 </head>
+
 <body>
   <section class="switch__wrapper">
     <div class="switch">
@@ -50,13 +50,13 @@
       </span>
     </div>
   </section>
-  
+
   <section class="wrapper">
     <header class="header">
       <div class="header__container _container">
         <a href="#" class="header__logo">
-         <img class="dark" src="./img/logo/logoDark.svg" alt="img">
-         <img class="light" src="./img/logo/logo.svg" alt="img">
+          <img class="dark" src="./img/logo/logoDark.svg" alt="img">
+          <img class="light" src="./img/logo/logo.svg" alt="img">
         </a>
         <div class="menu__icon tablet-show">
           <svg width="29" height="25" viewBox="0 0 29 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -89,7 +89,7 @@
         </div>
       </div>
     </header>
- 
+
     <header class="header-mob__container _container2">
       <section class="header__main-mob">
         <nav class="header__menu-mob">
@@ -209,9 +209,9 @@
               <div class="swiper swiper-default__main">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide" data-project="vitalgym">
-                      <div>
-                        <img src="./img/main-block/main1.png" alt="main image">
-                      </div>
+                    <div>
+                      <img src="./img/main-block/main1.png" alt="main image">
+                    </div>
                   </div>
                   <div class="swiper-slide" data-project="mybacs">
                     <div>
@@ -265,7 +265,11 @@
       <section id="about_us" class="section--for__link page__our-team our-team">
         <div class="our-team__container _container">
           <div class="our-team__header header-block">
-            <h3 class="wow animate__tada header-block_subtitle fw-600">About Us</h3>
+            <h3 class="wow animate__tada header-block_subtitle fw-600">About Us
+              <div data-wow-delay="0.7s" class="wow bounceInUp ball1">
+                It Squad
+              </div>
+            </h3>
             <h2 class="wow animate__rubberBand header-block_title fw-700">Our Team</h2>
           </div>
           <div class="our-team__body">
@@ -294,7 +298,9 @@
       <section id="services" class="section--for__link page__our-services our-services">
         <div class="our-services__container _container">
           <div class="our-services__header header-block">
-            <h3 class="header-block_subtitle fw-600">Our Services</h3>
+            <h3 class="header-block_subtitle fw-600">Our Services
+              <div data-wow-delay="0.7s" class="wow rollIn ball2">It Squad</div>
+            </h3>
           </div>
           <div class="our-services__text-column">
             <div class=" our-services__info blue _active">
@@ -324,7 +330,7 @@
               <div class="our-services__text p">
                 This service contains most popular favors in this field, <br> such as:
               </div>
-              <ul  class="our-services__list">
+              <ul class="our-services__list">
                 <li class="our-services__item p">We know how perfect UI/UX looks and why green button will bring you
                   more conversion. We also know that page should load faster than 2 seconds. And of course we know that
                   after pressing “Add to cart” - product should be added to cart instead of receiving an error message.
@@ -343,7 +349,7 @@
               <div class="our-services__text p">
                 This service contains most popular favors in this field, <br> such as:
               </div>
-              <ul  class="our-services__list">
+              <ul class="our-services__list">
                 <li class="our-services__item p">Migrating from Magento, BigCommerce or any other platform ? We can help
                   you with that! Importing products with all their info, configure all store settings and apps
                   integrations - all this tasks on our side</li>
@@ -359,7 +365,7 @@
               <div class="our-services__text p">
                 This service contains most popular favors in this field, <br> such as:
               </div>
-              <ul  class="our-services__list">
+              <ul class="our-services__list">
                 <li class="our-services__item p">Want to have unique Customer Portal for your store? Or maybe give your
                   customers an opportunity to build product bundles by themselfs ? We can turn your ideas into reality.
                   Just let us know</li>
@@ -442,19 +448,22 @@
       <section id="projects" class="section--for__link page__portfolio portfolio">
         <div class="portfolio__container _container">
           <div class="portfolio__header header-block">
-            <h3 class="wow animate__tada header-block_subtitle fw-700">Our Portfolio</h3>
+            <h3 class="wow animate__tada header-block_subtitle fw-700">Our Portfolio
+              <div data-wow-delay="0.7s" class="wow bounceInRight ball3">It Squad</div>
+            </h3>
             <h2 class="wow animate__rubberBand header-block_title fw-700">What do we do</h2>
             <div class="header-block_text fw-400 p">all projects that we have already done , proven can help to use more
-              <br> comfortable, then can used by client from our business</div>
+              <br> comfortable, then can used by client from our business
+            </div>
           </div>
           <div class="portfolio__items">
             <div class="swiper swiper-default">
               <div class="swiper-wrapper">
                 <div class="portfolio__item item-portfolio swiper-slide" data-project="vitalgym">
-                    <div class="item-portfolio__background">
-                      <img src="./img/portfolio/03.png" alt="urban home">
-                      <h3 class="background__text wf-700">Design Byte App</h3>
-                    </div>
+                  <div class="item-portfolio__background">
+                    <img src="./img/portfolio/03.png" alt="urban home">
+                    <h3 class="background__text wf-700">Design Byte App</h3>
+                  </div>
                 </div>
                 <div class="portfolio__item item-portfolio  item-portfolio_active swiper-slide" data-project="mybacs">
                   <div class="item-portfolio__background">
@@ -480,7 +489,7 @@
                     <h3 class="background__text wf-700">Modern UI/UX</h3>
                   </div>
                 </div>
-            
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -534,7 +543,9 @@
       <section class="page__reviews reviews">
         <div class="reviews__container _container">
           <div class="reviews__header header-block">
-            <h3 class="wow animate__tada header-block_subtitle fw-700">Testimonial</h3>
+            <h3 class="wow animate__tada header-block_subtitle fw-700">Testimonial
+              <div data-wow-delay="0.7s" class="wow bounceInUp ball4">It Squad</div>
+            </h3>
             <h2 class="wow animate__rubberBand header-block_title fw-700">People Talk about us</h2>
           </div>
           <div class="review__items">
@@ -573,8 +584,9 @@
                     </div>
                   </div>
                   <div class="item-review__text p2">
-                    "Excellent work and communication, quickly came up with multiple options so we could find the right way to solve my problems 🌟🌟🌟🌟🌟"
-                  </div> 
+                    "Excellent work and communication, quickly came up with multiple options so we could find the right
+                    way to solve my problems 🌟🌟🌟🌟🌟"
+                  </div>
                 </div>
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
@@ -591,7 +603,8 @@
                     </div>
                   </div>
                   <div class="item-review__text p2">
-                    "It was a pleasure working with Max. Good communication and worked very efficiently and effortlessly. I highly recommend him and his team. Will work together again in future for sure!"
+                    "It was a pleasure working with Max. Good communication and worked very efficiently and
+                    effortlessly. I highly recommend him and his team. Will work together again in future for sure!"
                   </div>
                 </div>
                 <div class="item-review swiper-slide">
@@ -609,7 +622,9 @@
                     </div>
                   </div>
                   <div class="item-review__text p2">
-                    "He is such a nice and hardworking guy , really appreciate the work he did , always available . He is the type guy who doesn't complain a lot , carry on . Great things are ahead . Highly recomended to anyone looking to develop his website . Big UP"
+                    "He is such a nice and hardworking guy , really appreciate the work he did , always available . He
+                    is the type guy who doesn't complain a lot , carry on . Great things are ahead . Highly recomended
+                    to anyone looking to develop his website . Big UP"
                   </div>
                 </div>
                 <div class="item-review swiper-slide">
@@ -627,7 +642,9 @@
                     </div>
                   </div>
                   <div class="item-review__text p2">
-                    "Maksym and his team are very professional and knowledgable in what they do. I had a great time working with them. They helped my website a lot, conversions went up and overall customer's experience on a website. I will be working with them again when my other website needs help."
+                    "Maksym and his team are very professional and knowledgable in what they do. I had a great time
+                    working with them. They helped my website a lot, conversions went up and overall customer's
+                    experience on a website. I will be working with them again when my other website needs help."
                   </div>
                 </div>
                 <div class="item-review swiper-slide">
@@ -663,7 +680,9 @@
                     </div>
                   </div>
                   <div class="item-review__text p2">
-                    "Max was an absolute pleasure to work with. Him and his team went above and beyond to make sure every detail was accounted for and far exceeded my expectations. I couldn't recommend him highly enough. I will 1000% be hiring for my next project."
+                    "Max was an absolute pleasure to work with. Him and his team went above and beyond to make sure
+                    every detail was accounted for and far exceeded my expectations. I couldn't recommend him highly
+                    enough. I will 1000% be hiring for my next project."
                   </div>
                 </div>
               </div>
@@ -810,20 +829,24 @@
           </div>
         </div>
       </div>
+      <div class="bouble blue-bouble blue__bouble1"></div>
+      <div class="bouble blue-bouble blue__bouble2"></div>
+      <div class="bouble blue-bouble blue__bouble3"></div>
+      <div class="bouble blue-bouble blue__bouble4"></div>
+      <div class="bouble blue-bouble blue__bouble5"></div>
+      <div class="bouble yellow-bouble yellow__bouble1"></div>
+      <div class="bouble yellow-bouble yellow__bouble2"></div>
+      <div class="bouble yellow-bouble yellow__bouble3"></div>
+      <div class="bouble yellow-bouble yellow__bouble4"></div>
+      <div class="bouble yellow-bouble yellow__bouble5"></div>
     </footer>
-    <div class="bouble blue-bouble blue__bouble1"></div>
-    <div class="bouble blue-bouble blue__bouble2"></div>
-    <div class="bouble blue-bouble blue__bouble3"></div>
-    <div class="bouble blue-bouble blue__bouble4"></div>
-    <div class="bouble blue-bouble blue__bouble5"></div>
-    <div class="bouble yellow-bouble yellow__bouble1"></div>
-    <div class="bouble yellow-bouble yellow__bouble2"></div>
-    <div class="bouble yellow-bouble yellow__bouble3"></div>
-    <div class="bouble yellow-bouble yellow__bouble4"></div>
-    <div class="bouble yellow-bouble yellow__bouble5"></div>
   </section>
+  <script src="js/wow.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/script.js" defer></script>
+  <script defer>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
