--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/02.svg" alt="profile photo">
+                      <img src="/img/reviews/Ellipse2.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
@@ -572,7 +572,7 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/01.svg" alt="profile photo">
+                      <img src="/img/reviews/Ellipse1.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
@@ -591,7 +591,7 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/02.svg" alt="profile photo">
+                      <img src="/img/reviews/Ellipse2.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
@@ -610,7 +610,7 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/01.svg" alt="profile photo">
+                      <img src="/img/reviews/Ellipse1.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
@@ -630,7 +630,7 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/02.svg" alt="profile photo">
+                      <img src="/img/reviews/Ellipse2.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
@@ -650,7 +650,7 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/01.svg" alt="profile photo">
+                      <img src="/img/reviews/Ellipse1.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
@@ -668,7 +668,7 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/02.svg" alt="profile photo">
+                      <img src="/img/reviews/Ellipse2.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
