--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 </head>
 
 <body>
+
+  <section class="up_scroll_btn__wrapper" >
+    <a class="up_scroll_btn" href="#">Scroll to Top</a>
+  </section>
+
+
+
   <section class="switch__wrapper">
     <div class="switch">
       <div class="icons_wrapper">
@@ -211,11 +218,6 @@
                   <div class="swiper-slide" data-project="vitalgym">
                     <div>
                       <img src="./img/main-block/main1.png" alt="main image">
-                    </div>
-                  </div>
-                  <div class="swiper-slide" data-project="mybacs">
-                    <div>
-                      <img src="./img/main-block/quality.jpg" alt="main image">
                     </div>
                   </div>
                   <div class="swiper-slide" data-project="urbanhome">
@@ -519,7 +521,6 @@
                   <img src="./img/portfolio/01.jpg" alt="">
                 </div>
               </div>
-              <div class="swiper-pagination"></div>
             </div>
             <div class="portfolio__description-info">
               <h2 class="portfolio__description-title fw-700">Beauty Tables</h2>
