--- a/index.html
+++ b/index.html
@@ -24,6 +24,80 @@
   </section>
 
 
+  <article style="display: none;" class="pop_up shopify_online">
+    <div>
+      <h3>Shopify Online
+        Store Development</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis quos beatae unde tempora laboriosam adipisci,
+        iure laudantium consequatur iste ipsum atque esse hic eveniet aut veniam aliquid voluptatibus sit repellendus?
+        Omnis debitis expedita quas assumenda sit asperiores in accusantium, eaque, distinctio a dolor provident dolores
+        reprehenderit ex amet deleniti eum aspernatur odio maxime ipsam ut. Quis rerum laboriosam in laudantium.
+        Quod cumque modi sapiente nam tenetur nobis quisquam, ipsam consequuntur quam, quidem aut esse eligendi
+        doloribus similique porro repellat sunt amet natus? Earum quaerat ratione error autem provident? Earum, soluta?
+        Ab alias cum illum reiciendis eveniet veniam! Rem impedit illo repellat, illum doloremque autem consequatur,
+        mollitia alias assumenda officia provident id, eaque molestiae! Soluta magnam dolores laboriosam, aliquid minus
+        nemo.
+        Sed maiores, dignissimos quod deserunt obcaecati architecto consectetur nesciunt! Facilis nam delectus aperiam
+        quisquam velit corporis vero maxime in, ducimus placeat similique hic. Eveniet autem dolores quae, ad temporibus
+        accusamus?</p>
+    </div>
+  </article>
+  <article style="display: none;" class="pop_up website_optimization">
+    <div>
+      <h3>Website Optimization</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum expedita ratione sunt corporis rem autem
+        nesciunt! Provident asperiores natus fugiat, earum repudiandae ex necessitatibus harum incidunt totam quidem
+        nihil quasi!
+        Reprehenderit obcaecati officia, nemo, ipsum magnam in, ad blanditiis id totam corporis dolorem praesentium.
+        Officiis optio doloremque provident repellendus vero animi delectus sapiente vel pariatur et, non asperiores
+        culpa quidem!
+        Aperiam iusto dolorum omnis blanditiis deleniti totam eos labore! Velit praesentium deserunt aperiam consequatur
+        quas ratione voluptates minus nisi laborum distinctio nostrum saepe beatae aspernatur laboriosam, quia
+        blanditiis doloremque libero.
+        Veritatis voluptatum quo natus nulla suscipit, debitis quidem atque commodi? Ut eum, nobis optio ducimus fugit
+        possimus, a ratione deserunt impedit magni modi harum, cum consequuntur explicabo dolorem quod architecto!
+        Dicta natus culpa accusamus reprehenderit aliquid repellendus dolor corrupti soluta magnam! Doloribus corporis
+        quam minima est libero, iure ratione laborum dolore natus placeat enim, pariatur in sapiente sit, reprehenderit
+        adipisci!</p>
+    </div>
+  </article>
+  <article style="display: none;" class="pop_up store_migration">
+    <div>
+      <h3>Store Migration</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ex maxime est tempora, eum nulla repellat
+        voluptatum molestiae aut debitis maiores asperiores sint, officia totam consectetur eaque, temporibus quod
+        eveniet.
+        Veniam inventore provident eligendi praesentium quod, consequuntur quis ipsa modi nostrum sit mollitia fuga
+        magnam accusantium aut enim alias? Expedita ab ducimus repellendus nesciunt atque quidem amet ipsum quibusdam
+        exercitationem!
+        Laboriosam nobis libero molestias eius nihil magni, quasi ut tenetur non porro possimus cumque quos, est rerum,
+        eveniet perferendis modi accusamus excepturi explicabo consectetur ad et facilis quas in! Illum!
+        Ratione explicabo hic culpa dolorem distinctio iste, quia in enim animi quibusdam dolor modi omnis veritatis
+        porro? Dolorem quos quia quod, sint fuga vel doloribus, iste tempora eaque corrupti exercitationem.
+        Veritatis ratione quas esse inventore. Distinctio possimus excepturi illo alias nobis assumenda pariatur error,
+        autem culpa optio minima id repellendus? Asperiores modi ducimus quo eius a. Tenetur voluptatibus nulla ipsam!
+      </p>
+    </div>
+  </article>
+  <article style="display: none;" class="pop_up custom_development">
+    <div>
+      <h3>Custom Development</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, adipisci nulla quisquam optio sed accusamus
+        magnam molestiae odit facere id neque sint dolores nobis pariatur modi eum asperiores nam eos.
+        Sit, autem quod sunt atque mollitia necessitatibus aliquid eum est deserunt minus modi. Impedit voluptatem culpa
+        dignissimos quasi nulla autem quos numquam repellendus enim repellat. Nam, inventore. Tempora, optio
+        praesentium.
+        Ratione quidem quaerat voluptate recusandae amet. Laborum molestiae voluptatum ut illo saepe consequatur minus
+        asperiores aliquid at id doloremque odit vero repudiandae, inventore placeat dolorem recusandae aut praesentium
+        eaque veritatis!
+        Laboriosam placeat eveniet quasi, vero odit deserunt. Quidem perferendis ratione architecto ipsam voluptas
+        alias, quibusdam nisi eos inventore laboriosam ad similique quasi. Consectetur quae labore rerum architecto fuga
+        incidunt exercitationem.
+        Debitis, a nihil recusandae vitae delectus fuga odit labore illum laudantium repellendus corporis praesentium
+        hic molestiae nulla quis nobis placeat provident eaque neque cumque laboriosam minima sed temporibus!
+        Temporibus, eius.</p>
+    </div>
+  </article>
 
   <section class="switch__wrapper">
     <div class="switch">
@@ -95,7 +169,7 @@
           </ul>
         </nav>
         <div class="menu-block__buttons tablet-hide">
-          <a href="" class="menu-block__button button__border fw-700">Contact us</a>
+          <a href="https://www.upwork.com/ag/itsquad/" class="menu-block__button button__border fw-700">Contact us</a>
         </div>
       </div>
     </header>
@@ -148,7 +222,7 @@
               </defs>
             </svg>
           </a>
-          <a href="" class="social__item-mob">
+          <a class="social__item-mob">
             <svg width="36" height="37" viewBox="0 0 36 37" fill="none" xmlns="http://www.w3.org/2000/svg">
               <ellipse cx="18" cy="18.0036" rx="18" ry="18.0036" fill="#0B50FF" />
               <g clip-path="url(#clip0_25_768)">
@@ -271,7 +345,6 @@
         </article>
       </section>
       <section id="about_us" class="section--for__link page__our-team our-team">
-        <div data-wow-delay="0.7s" class="ball1"></div>
         <div class="our-team__container _container">
           <div class="our-team__header header-block">
             <h3 class="wow animate__tada header-block_subtitle fw-600">
@@ -287,6 +360,8 @@
               </div>
               <div class="our-team__items items-column">
                 <div class="items-column__text">
+
+
                   <div class="first-text p">We are an <a href="https://www.upwork.com/ag/itsquad/"
                       class="Upwork fw-600 p">Upwork</a> agency of Shopify experts. We specialize in a complete cycle
                     development of an eCommerce and dropshipping stores on the Shopify platform.</div>
@@ -296,7 +371,7 @@
                 </div>
                 <div class="item-column__buttons">
                   <a href="https://www.upwork.com/ag/itsquad/" class="button__primary">Contact Us</a>
-                  <div class="button__border">Our Story</div>
+                  <div style="display: none;" class="button__border">Our Story</div>
                 </div>
               </div>
             </div>
@@ -313,28 +388,28 @@
               <span class="number_icon material-symbols-outlined">
                 sentiment_satisfied
               </span>
-              <h3 class="wow animate__zoomInDown">2400+</h3>
+              <h3 class="wow animate__zoomInDown"><span id="happy_clients" data-count="2400">0</span>+</h3>
               <p>Happy Clients</p>
             </div>
             <div class="number__list__element">
               <span class="number_icon material-symbols-outlined">
                 business_center
               </span>
-              <h3 class="wow animate__zoomInDown">150+</h3>
+              <h3 class="wow animate__zoomInDown"><span id="compleated_projects" data-count="150">0</span>+</h3>
               <p>Compleated Projects</p>
             </div>
             <div class="number__list__element">
               <span class="number_icon  material-symbols-outlined">
                 cloud_upload
               </span>
-              <h3 class="wow animate__zoomInUp">120+ k</h3>
+              <h3 class="wow animate__zoomInUp"><span id="File Downloaded" data-count="120">0</span>+ k</h3>
               <p>File Downloaded</p>
             </div>
             <div class="number__list__element">
               <span class="number_icon material-symbols-outlined">
                 social_leaderboard
               </span>
-              <h3 class="wow animate__zoomInUp">10+</h3>
+              <h3 class="wow animate__zoomInUp"><span id="award_win" data-count="10">0</span>+</h3>
               <p>Award Win</p>
             </div>
           </div>
@@ -343,16 +418,15 @@
 
 
       <section id="services" class="section--for__link page__our-services our-services">
-        <div data-wow-delay="0.7s" class="ball2"></div>
         <div class="our-services__container _container">
           <div class="our-services__header header-block">
-           
+
             <h3 class="header-block_subtitle fw-600">Our Services
             </h3>
           </div>
           <div class="our-services__text-column">
             <div class=" our-services__info blue _active">
-              <h2 class="wow animate__rubberBand our-services__header header-block_title fw-700">Shopify Online <br>
+              <h2 class="wow animate__rubberBand our-services__header header-block_title fw-700">Shopify Online<br>
                 Store Development
               </h2>
               <div class="our-services__text p">
@@ -368,7 +442,8 @@
                 <li class="our-services__item p">Shipping configuration</li>
               </ul>
               <div class="our-services__button p fw-700">
-                <a href="" class="button__arrow">
+
+                <a data-read="shopify_online" class="button__arrow">
                   Read more <img src="./img/button-arrow/arrow-right.svg" alt="button__arrow">
                 </a>
               </div>
@@ -387,7 +462,7 @@
                   favors.</li>
               </ul>
               <div class="our-services__button p fw-700">
-                <a href="" class="button__arrow">
+                <a data-read="website_optimization" class="button__arrow">
                   Read more <img src="./img/button-arrow/arrow-right.svg" alt="button__arrow">
                 </a>
               </div>
@@ -403,7 +478,7 @@
                   integrations - all this tasks on our side</li>
               </ul>
               <div class="our-services__button p fw-700">
-                <a href="" class="button__arrow">
+                <a data-read="store_migration" class="button__arrow">
                   Read more <img src="./img/button-arrow/arrow-right.svg" alt="button__arrow">
                 </a>
               </div>
@@ -419,7 +494,7 @@
                   Just let us know</li>
               </ul>
               <div class="our-services__button p fw-700">
-                <a href="" class="button__arrow">
+                <a data-read="custom_development" class="button__arrow">
                   Read more <img src="./img/button-arrow/arrow-right.svg" alt="button__arrow">
                 </a>
               </div>
@@ -494,10 +569,9 @@
         </div>
       </section>
       <section id="projects" class="section--for__link page__portfolio portfolio">
-        <div data-wow-delay="0.7s" class="ball1"></div>
         <div class="portfolio__container _container">
           <div class="portfolio__header header-block">
-            
+
             <h3 class="wow animate__tada header-block_subtitle fw-700">Our Portfolio
             </h3>
             <h2 class="wow animate__rubberBand header-block_title fw-700">What do we do</h2>
@@ -510,7 +584,7 @@
               <div class="swiper-wrapper">
                 <div class="portfolio__item item-portfolio swiper-slide" data-project="vitalgym">
                   <div class="item-portfolio__background">
-                    <img src="./img/portfolio/03.png" alt="urban home">
+                    <img src="./img/portfolio/Bru.png" alt="urban home">
                     <h3 class="background__text wf-700">Design Byte App</h3>
                   </div>
                 </div>
@@ -522,7 +596,7 @@
                 </div>
                 <div class="portfolio__item item-portfolio swiper-slide" data-project="urbanhome">
                   <div class="item-portfolio__background">
-                    <img src="./img/portfolio/01.png" alt="urban home">
+                    <img src="./img/portfolio/davichio.png" alt="urban home">
                     <h3 class="background__text wf-700">Design Furniture App</h3>
                   </div>
                 </div>
@@ -540,7 +614,7 @@
                 </div>
 
               </div>
-              <div class="swiper-pagination"></div>
+              <div class="swiper-pagination-default">1</div>
             </div>
           </div>
           <div class="portfolio__button">
@@ -559,15 +633,16 @@
             <div class="swiper swiper-style1">
               <div class="swiper-wrapper">
                 <div class="portfolio__description-image swiper-slide">
-                  <img src="./img/portfolio/01.png" alt="">
+                  <img src="./img/portfolio/davichio.png" alt="">
                 </div>
                 <div class="portfolio__description-image swiper-slide">
-                  <img src="./img/portfolio/03.png" alt="">
+                  <img src="./img/portfolio/Bru.png" alt="">
                 </div>
                 <div class="portfolio__description-image swiper-slide">
-                  <img src="./img/portfolio/01.png" alt="">
+                  <img src="./img/portfolio/davichio.png" alt="">
                 </div>
               </div>
+              <div class="swiper-pagination-style1"></div>
             </div>
             <div class="portfolio__description-info">
               <h2 class="portfolio__description-title fw-700">Beauty Tables</h2>
@@ -734,6 +809,7 @@
                   </div>
                 </div>
               </div>
+              <div class="swiper-pagination_rewiews"></div>
             </div>
           </div>
         </div>
